--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@react-native-firebase/auth": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tamagui/config": "^1.125.26",
+    "@tamagui/core": "^1.125.26",
+    "@tamagui/toast": "^1.125.26",
+    "burnt": "^0.13.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
@@ -43,7 +47,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tamagui": "^1.125.26"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
