--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
+    "@react-native-firebase/firestore": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "^1.8.0",
     "@tamagui/config": "^1.125.26",
     "@tamagui/core": "^1.125.26",
     "@tamagui/toast": "^1.125.26",
@@ -31,6 +33,7 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.18",
     "expo-splash-screen": "~0.29.22",
@@ -38,6 +41,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -46,6 +50,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
