--- a/application/package.json
+++ b/application/package.json
@@ -32,8 +32,10 @@
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image": "^2.1.7",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.0.5",
@@ -51,6 +53,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
@@ -59,7 +62,7 @@
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.125.26",
-    "expo-crypto": "~14.0.2"
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
