--- a/application/package.json
+++ b/application/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
+    "android": "export ANDROID_SDK_ROOT=$HOME/Library/Android/sdk && expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
@@ -16,40 +16,41 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
     "@react-native-firebase/storage": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.3.2",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
-    "@shopify/flash-list": "^1.8.0",
+    "@shopify/flash-list": "1.7.3",
     "@tamagui/config": "^1.125.26",
     "@tamagui/core": "^1.125.26",
     "@tamagui/toast": "^1.125.26",
     "burnt": "^0.13.0",
-    "expo": "~52.0.38",
+    "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
-    "expo-build-properties": "^0.13.2",
+    "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-image": "^2.1.7",
+    "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.1.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.18",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "~3.16.1",
@@ -57,12 +58,11 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "tamagui": "^1.125.26",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "tamagui": "^1.125.26"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
