Adds chat changes and booking changes refinement

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,10 @@ yarn-error.*
 
 app-example
 
-GoogleService-Info.plist
-google-services.json
+# GoogleService-Info.plist
+# google-services.json
 
 ios
 android
+
+expo-notification.json
