--- a/application/package.json
+++ b/application/package.json
@@ -69,7 +69,8 @@
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.125.26",
-    "expo-video": "~2.0.6"
+    "expo-video": "~2.0.6",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
