--- a/application/package.json
+++ b/application/package.json
@@ -6,6 +6,9 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "export ANDROID_SDK_ROOT=$HOME/Library/Android/sdk && expo run:android",
+    "build:ios": "eas build -p ios --profile production",
+    "submit:ios": "eas submit -p ios",
+    "build:android": "eas build -p android --profile development --local",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
